Fix autocomplete menu showing behind course cards

--- a/app/assets/stylesheets/components.css.less
+++ b/app/assets/stylesheets/components.css.less
@@ -674,6 +674,7 @@ a.anchor {
 
 .tokenfield {
   height: auto;
+  z-index: 1;
 
   #exercise_labels.form-control {
     height: auto;
